k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-hw
spec:
  selector:
    matchLabels:
      app: swagger-hw
  replicas: 1
  template:
    metadata:
      labels:
        app: swagger-hw
    spec:
      containers:
        - name: swagger-hw
          image: docker.pkg.github.com/sealtv/http-swagger-hello-world/hw:latest
          resources:
            requests: 
              memory: "50Mi"
            limits:
              memory: "100Mi"
              cpu: "50m"
          ports:
            - name: web
              containerPort: 1323
